--- a/devfront/src/components/Navbar/navbar.scss
+++ b/devfront/src/components/Navbar/navbar.scss
@@ -1,5 +1,5 @@
 $text-color: white; 
-
+ 
 nav { 
   width: 100%;
   height: 3em;
@@ -110,6 +110,14 @@ nav {
 
 
 @media screen and (max-width: 600px) {
+  .nav-connect {
+    .mycollection {
+      display: none;
+    }
+    .avatar--home {
+      display: none;
+    }   
+  }
   .drop {
     display: block;
   }
